fix: add style for high contrast
add missing borders for menus and thumb preview + increased bg shadows

--- a/src/style.css
+++ b/src/style.css
@@ -187,3 +187,27 @@ statuspage box {
   margin: 0px;
   margin-bottom: 3px;
 }
+
+@media (prefers-contrast: more) {
+  .chapter-popover picture,
+  .osd popover > contents,
+  .osd popover > arrow {
+    border: 1px solid var(--border-color);
+  }
+
+  .header-and-controls {
+    background:
+      linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.6) 0%,
+        rgba(0, 0, 0, 0.3) 5%,
+        rgba(0, 0, 0, 0) 17%
+      ),
+      linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.8) 0%,
+        rgba(0, 0, 0, 0.46) 10%,
+        rgba(0, 0, 0, 0) 35%
+      );
+  }
+}
